--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -49,6 +49,7 @@
       </ul>
     </div>
 </ng-template>
+<span class="spacer"></span>
 
 <ng-template #elseBlock2>
   <p class="tipoLetra mt-3 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</p>
@@ -56,6 +57,7 @@
 <!--
   <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</h6>
 -->
+<span class="spacer"></span>
 
   <ng-container>
     <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
